Sets nav toggle breakpoint to 1px below where the new nav layout kicks in, to prevent 1px overlap between the two.

--- a/css/screen.css
+++ b/css/screen.css
@@ -470,7 +470,7 @@ footer[role="contentinfo"] a:hover {
 .hide-me {
 	overflow: hidden;
 }
-@media screen and (max-width: 70em) {
+@media screen and (max-width: 69.9375em) {
 	.hide-me {
 		max-height: 0;
 		display: block;
